[gd_scene load_steps=2 format=2]

[ext_resource path="res://dialog_creator/DialogEditor/dialog_creator.gd" type="Script" id=1]

[node name="dialogCreator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
npcFile = "res://dialog_creator/Data/NPCData.json"
playerStatsFile = "res://dialog_creator/Data/PlayerStats.json"
itemsFile = "res://dialog_creator/Data/ItemData.json"
animationsFile = "res://dialog_creator/Data/Animations.json"
questFile = "res://dialog_creator/Data/QuestsData.json"

[node name="graphEdit" type="GraphEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
right_disconnects = true

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 0.67451, 0.67451, 0.67451, 1 )
margin_left = 217.828
margin_top = 6.0184
margin_right = 351.828
margin_bottom = 35.0184

[node name="menuButton" type="MenuButton" parent="."]
margin_left = 219.085
margin_top = 6.0
margin_right = 352.085
margin_bottom = 35.0
text = "Add Dialog Node"
items = [ "Text", null, 0, false, false, 0, 0, null, "", false, "Decision", null, 0, false, false, 1, 0, null, "", false, "Event", null, 0, false, false, 2, 0, null, "", false, "End", null, 0, false, false, 3, 0, null, "", false, "Entry Point", null, 0, false, false, 4, 0, null, "", false ]
switch_on_hover = true

[node name="save" type="Button" parent="."]
margin_left = 357.122
margin_top = 9.7895
margin_right = 424.122
margin_bottom = 29.7895
text = "Save"

[node name="load" type="Button" parent="."]
margin_left = 545.836
margin_top = 12.0
margin_right = 612.836
margin_bottom = 32.0
text = "Load"

[node name="fileDialog" type="FileDialog" parent="."]
margin_left = 220.211
margin_top = 146.158
margin_right = 727.211
margin_bottom = 503.158
window_title = "Open a File"
dialog_hide_on_ok = true
mode = 0
access = 2
current_dir = "G:/Projects/BitBucket/DialogEditor"
current_path = "G:/Projects/BitBucket/DialogEditor/"

[node name="saveFileDialog" type="FileDialog" parent="."]
margin_left = 221.809
margin_top = 140.434
margin_right = 785.809
margin_bottom = 495.434
access = 2
current_dir = "G:/Projects/BitBucket/DialogEditor"
current_path = "G:/Projects/BitBucket/DialogEditor/"

[node name="deleteAll" type="Button" parent="."]
margin_left = 945.65
margin_top = 13.0
margin_right = 1021.65
margin_bottom = 33.0
text = "Delete All"

[node name="loadedDialogsSelection" type="MenuButton" parent="."]
margin_left = 612.0
margin_top = 12.0
margin_right = 728.0
margin_bottom = 32.0
disabled = true
text = "loaded dialogs..."

[node name="dialogNameEdit" type="LineEdit" parent="."]
margin_left = 427.0
margin_top = 8.0
margin_right = 531.0
margin_bottom = 32.0
placeholder_text = "dialog name..."

[node name="startNodeText" type="Label" parent="."]
margin_left = 739.646
margin_top = 15.8422
margin_right = 810.646
margin_bottom = 29.8422
text = "Start Node:"

[node name="startNode" type="OptionButton" parent="."]
margin_left = 817.464
margin_top = 14.036
margin_right = 935.464
margin_bottom = 34.036
disabled = true
text = "start node..."

[connection signal="connection_request" from="graphEdit" to="." method="_on_graphEdit_connection_request"]
[connection signal="connection_to_empty" from="graphEdit" to="." method="_on_graphEdit_connection_to_empty"]
[connection signal="delete_nodes_request" from="graphEdit" to="." method="_on_graphEdit_delete_nodes_request"]
[connection signal="disconnection_request" from="graphEdit" to="." method="_on_graphEdit_disconnection_request"]
[connection signal="duplicate_nodes_request" from="graphEdit" to="." method="_on_graphEdit_duplicate_nodes_request"]
[connection signal="node_selected" from="graphEdit" to="." method="_on_graphEdit_node_selected"]
[connection signal="pressed" from="save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="load" to="." method="_on_load_pressed"]
[connection signal="file_selected" from="fileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="saveFileDialog" to="." method="_on_saveFileDialog_file_selected"]
[connection signal="pressed" from="deleteAll" to="." method="_on_deleteAll_pressed"]
